--- a/admin/views/base/index.haml
+++ b/admin/views/base/index.haml
@@ -3,23 +3,18 @@
     %h2.title Dashboard
     .inner
       %p.first
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        %span.hightlight
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      %p
-        %span.small
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+        This is your dashboard. There are many like it, but this one is yours. From here you can see above you links 
+        to edit pages and accounts. Pages are the meat of the application, and accounts are pretty secondary and weak.
+        We're just using the default Padrino admin account interface.
       %p
         %span.gray
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+          "Fikus dreamed a dream for me / It cost me nothing it was free / He dreamed of walking in the sand / Of blossoms forming in his hand" / -- from Fikus, by Phish
       %hr
       %p
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        The rest of this is just filler text. You can edit admin/views/base/index.haml to change this text to give
+        important notices to your users. Or you can edit admin/views/base/_sidebar.haml to change the sidebar text you see
+        to the right.
         %span.hightlight
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          OMG Muh text is highlighted and I don't know why!!! HALP!!!1
 
 -content_for :sidebar, partial("base/sidebar")
