Refactoring cache and adding multiple domain support

--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -9,7 +9,7 @@
   %body
     #container
       #header
-        %h1=link_to "#{FikusConfig.site_name} Admin", url(:base_index)
+        %h1=link_to "#{current_site.name} Admin", url(:base_index)
         #user-navigation
           %ul.wat-cf
             %li=link_to pat(:profile), url(:accounts, :edit, :id => current_account.id)
